<resources>
    <string name="app_name">superlistfinal</string>

    <string name="new_list_name_text">Name of the list</string>
    <string name="new_list_date_text">Select a date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_list_product_cell_initial_qty">0</string>
    <string name="new_list_product_cell_default_item_name">Product Name</string>
    <string name="new_list_default_date_text">--/--/--</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="missing_information">Missing Information</string>
    <string name="missing_information_message">Missing required information! Please make sure you have selected a date, given the list a name and added products to your list. </string>
    <string name="missing_information_message_product">Missing required information! Please make sure you have type a name for the product and selected a category. </string>
    <string name="list_name">List Name</string>
    <string name="date"> Date</string>
    <string name="products">Products</string>
    <string name="list_date">List Date</string>
    <string name="master_list">Master List</string>
    <string name="back">Back</string>
    <string name="product_category">Product Category</string>
    <string name="separator">---</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_list">Delete List</string>
    <string name="delete_product_message">Are you sure you want to delete product:</string>
    <string name="delete_list_message">Are you sure you want to delete this List?</string>
    <string name="product_list_product_name">Product Name</string>
    <string name="product_list_product_category">Product Category</string>
    <string name="product_list_qty">0</string>
    <string name="sort_switch">Sort</string>
    <string name="alphabetical">ABC.</string>
    <string name="categorty">CAT.</string>
    <string name="lists_title">LISTS</string>
    <string name="new_list_title">ADD NEW LIST</string>
    <string name="master_list_title">PRODUCTS</string>
    <string name="select_theme">Select Theme</string>
    <string name="blue_theme">Blue Theme</string>
    <string name="pink_theme">Pink Theme</string>
    <string name="gray_theme">Gray Theme</string>
    <string name="red_theme">Red Theme</string>
    <string name="purple_theme">Purple Theme</string>


</resources>